--- a/table/2017/05 .md
+++ b/table/2017/05 .md
@@ -1,32 +1,15 @@
-日期|签到
-:---------------|:---------------
-5
-2||
-3||
-4||
-5||
-6||
-7||
-8||
-9||
-10||
-11||
-12||
-13||
-14||
-15||
-16||
-17||
-18||
-19||
-20||
-21||
-22||
-23||
-24||
-25||
-26||
-27||
-28||
-29||
-30||
+ 俯卧撑（每天200个）
+ 1日
+ 2日
+ 3日
+ 剩下的日子
+ 奔跑（每天5km）
+ 1日
+ 2日
+ 3日
+ 剩下的日子
+ 骑车（每天10km）
+ 1日
+ 2日
+ 3日
+ 剩下的日子
